# textual-simple-auth

./: CHANGELOG.md  README.md  pyproject.toml
src/textual_simple_auth/: auth.py  auth.tcss  decorator.py  decorators.py  demo.py  demo.tcss  login.py  login.tcss  mre.py  mre_push_screen.py  mre_styled_screen.py  mre_styled_screen_newscreen.py  wrap_click.py
