[tool.poetry]
name = "textual-simple-auth"
version = "0.1.0"
description = ""
authors = ["David Fokkema <davidfokkema@icloud.com>"]
readme = "README.md"
packages = [{include = "textual_simple_auth", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.67.1"
platformdirs = "^4.2.2"


[tool.poetry.group.dev.dependencies]
textual-dev = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
