[tool.poetry]
name = "textual-simple-auth"
version = "0.3.0"
description = "Simple authentication for Textual apps."
authors = ["David Fokkema <davidfokkema@icloud.com>"]
readme = "README.md"
packages = [{ include = "textual_simple_auth", from = "src" }]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.67.1"
platformdirs = "^4.2.2"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
textual-dev = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
